修改权限配置与错误处理顺序，满足前端要求